# ntnu-bachelor

./: .gitignore  README.md
assets/: items.data  objects.data  quests.data
assets/debug/: template.html
assets/dialogues/: 0.ed  1.ed  2.ed
assets/models/: attachments.noma  axe.nom  barrelsmall.nom  barrelsmallfish.nom  bench.nom  bench2.nom  boar.nom  boat.nom  boathouse.nom  carthay.nom  character.nom  chest.nom  coinslarge.nom  coinsmedium.nom  coinssmall.nom  coinstiny.nom  crate.nom  cratesnow.nom  emptyfishrack.nom  fence0.nom  fence1.nom  fence2.nom  fence3.nom  fence4.nom  fencepole0.nom  fishingboat.nom  fishrack.nom  flag0.nom  flag1.nom  flowers1.nom  grass0.nom  hair0.nom  hair1.nom  helm.nom  log.nom  logs.nom  pants.nom  player.nom  redflowers.nom  reeds0.nom  (+21 more)
assets/models/source/player/: _transitions.txt  idle.dae  idle.nom  run.dae  run.nom  shielding.dae  shielding.nom  swing.dae  swing.nom
assets/models/source/sword/: idle.dae  idle.nom  run.dae  run.nom  swing.dae  swing.nom
assets/scripts/: 0.ed  1.ed  3.ed
assets/shaders/animatediffuse/: fragment.glsl  vertex.glsl
assets/shaders/basic_mesh/: vertex.glsl
assets/shaders/diffuse/: fragment.glsl  vertex.glsl
assets/shaders/imgui/: fragment.glsl  vertex.glsl
assets/shaders/pick/: fragment.glsl  vertex.glsl
assets/shaders/sprite/: vertex.glsl
assets/shaders/static/: vertex.glsl
assets/shaders/static_textured/: fragment.glsl
assets/shaders/staticdiffuse/: fragment.glsl  vertex.glsl
assets/shaders/terrain/: fragment.glsl  vertex.glsl
assets/shaders/water/: fragment.glsl  vertex.glsl
assets/worlds/: main.ew  main.ewo  main.ewt  main_-1_-1.ec  main_-1_0.ec  main_-1_1.ec  main_-1_2.ec  main_-1_3.ec  main_-2_-1.ec  main_-2_0.ec  main_-2_1.ec  main_-2_2.ec  main_-2_3.ec  main_-3_1.ec  main_-3_2.ec  main_0_-1.ec  main_0_0.ec  main_0_1.ec  main_0_2.ec  main_0_3.ec  main_1_-1.ec  main_1_-2.ec  main_1_0.ec  main_1_1.ec  main_1_2.ec  main_1_3.ec  main_2_-1.ec  main_2_-2.ec  main_2_0.ec  main_2_1.ec  main_2_2.ec  main_2_3.ec  main_2_4.ec  main_3_-1.ec  main_3_0.ec  main_3_1.ec  main_3_2.ec  main_3_3.ec
client/: default-config.hpp
client/project/: CMakeLists.txt
client/source/: chat.cpp  chat.hpp  chat_ui.cpp  chat_ui.hpp  client.cpp  client.hpp  commands.cpp  commands.hpp  dialogue_ui.cpp  dialogue_ui.hpp  game.cpp  game.hpp  hit_splats.cpp  hit_splats.hpp  lobby.cpp  lobby.hpp  main_ui.cpp  main_ui.hpp  start.cpp  trading.cpp  trading.hpp  ui.cpp  ui.hpp  ui_context.cpp  ui_context.hpp  ui_dialogue.cpp  ui_dialogue.hpp  ui_hud.cpp  ui_hud.hpp  ui_main.cpp  ui_main.hpp  ui_stats.cpp  ui_stats.hpp  ui_tab_equipment.cpp  ui_tab_equipment.hpp  ui_tab_inventory.cpp  ui_tab_inventory.hpp  ui_tab_quests.cpp  ui_tab_quests.hpp  ui_tab_stats.cpp  (+7 more)
core/: default-config.hpp
core/include/: assets.hpp  audio.hpp  camera.hpp  containers.hpp  debug.hpp  draw.hpp  event.hpp  font.hpp  input.hpp  io.hpp  loop.hpp  math.hpp  network.hpp  platform.hpp  scene.hpp  skeletal.hpp  surface.hpp  timer.hpp  transform.hpp  ui.hpp  unicode.hpp  vertex.hpp  window.hpp
core/project/: CMakeLists.txt  UnixMake.sh
core/source/: assets.cpp  audio.cpp  camera.cpp  debug.cpp  draw.cpp  event.cpp  font.cpp  gl.cpp  input.cpp  io.cpp  linux_platform.hpp  loop.cpp  network.cpp  ogg_vorbis.cpp  ogg_vorbis.hpp  png.cpp  png.hpp  scene.cpp  skeletal.cpp  surface.cpp  timer.cpp  transform.cpp  ui.cpp  unicode.cpp  vertex.cpp  wasapi.cpp  wasapi.hpp  window.cpp  windows_gl.cpp  windows_gl.hpp  windows_platform.cpp  windows_platform.hpp  windows_sockets.cpp  windows_sockets.hpp  windows_window.cpp  windows_window.hpp  x11_gl.cpp  x11_gl.hpp  x11_window.cpp  x11_window.hpp
database/pgsql/: find_player_by_email.sql  find_player_by_name.sql  install.sql  register_account.sql  register_player.sql  set_item_ownership.sql  set_player_tile.sql  set_quest_task.sql  set_stat.sql  set_variable.sql
game/: default-config.hpp
game/include/: character.hpp  decoration.hpp  dialogue.hpp  game_assets.hpp  gamevar.hpp  item.hpp  minimap.hpp  object.hpp  packets.hpp  pathfinding.hpp  player.hpp  quest.hpp  render.hpp  script.hpp  world.hpp  world_objects.hpp
game/lib/debug/: game.lib
game/lib/release/: game.lib
game/project/: CMakeLists.txt
game/source/: character.cpp  decoration.cpp  dialogue.cpp  game_assets.cpp  gamevar.cpp  item.cpp  minimap.cpp  object.cpp  packets.cpp  pathfinding.cpp  player.cpp  quest.cpp  render.cpp  script.cpp  world.cpp  world_objects.cpp
server/: default-config.hpp
server/project/: CMakeLists.txt  VisualStudio15_x64.bat
server/source/: combat.cpp  combat.hpp  persistency.cpp  persistency.hpp  server.cpp  server.hpp  server_world.cpp  server_world.hpp  start.cpp  updater.cpp  updater.hpp
toolkit/include/: common_ui.hpp
toolkit/project/: CMakeLists.txt
toolkit/source/: commands.cpp  common_ui.cpp  common_ui.hpp  dialogue_editor.cpp  dialogue_editor.hpp  editor.cpp  editor.hpp  item_editor.cpp  item_editor.hpp  menu.cpp  menu.hpp  model_manager.cpp  model_manager.hpp  object_editor.cpp  object_editor.hpp  quest_editor.cpp  quest_editor.hpp  script_editor.cpp  script_editor.hpp  start.cpp
web/: config.default.php
web/cli/: install.php
web/public/: index.php  main.css  main.js
web/source/: database.php  files.php  init.php  router.php  template.php
web/templates/: download.php  leaderboard.php  main.php  news.php  signup.php  world.php
